--- a/views/home.pug
+++ b/views/home.pug
@@ -3,7 +3,7 @@ html
     head
         title Chat
         script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js')
-        script(src="/socket.io/socket.io.js")
+        script(src='https://cdn.socket.io/socket.io-1.2.0.js')
         script(src="script.js")
     body
         div.container
